[gd_scene load_steps=17 format=3 uid="uid://bher8kxrx67l2"]

[ext_resource type="Script" uid="uid://bghqf7keyl2yo" path="res://Scripts/FinalLoreScene.gd" id="1_qwyng"]
[ext_resource type="Texture2D" uid="uid://dmty7w7yc6nru" path="res://Graphics/Zonas/LoreScene/Final_4.png" id="2_4lubk"]
[ext_resource type="Texture2D" uid="uid://cw5lvi35adsb7" path="res://Graphics/Zonas/LoreScene/Final_3.png" id="3_4n2yx"]
[ext_resource type="Texture2D" uid="uid://dbq7nikdh2f2s" path="res://Graphics/Zonas/LoreScene/Final_2.png" id="4_f0nhm"]
[ext_resource type="PackedScene" uid="uid://ccpbm1qpal8m0" path="res://Scenes/TypewriterLabel.tscn" id="5_f0nhm"]
[ext_resource type="Texture2D" uid="uid://cnjcxs2s7rf52" path="res://Graphics/Zonas/LoreScene/Final_1.png" id="5_vq1m4"]
[ext_resource type="AudioStream" uid="uid://lcvdfisb4kti" path="res://SFX/Others/Single_mechanical.wav" id="6_vq1m4"]
[ext_resource type="Texture2D" uid="uid://b3degqy5uf8ea" path="res://Graphics/GUI/Buttons/7-1.png" id="7_kjnr2"]
[ext_resource type="Texture2D" uid="uid://bdn1sk233bncw" path="res://Graphics/GUI/Buttons/7-3.png" id="8_6joof"]
[ext_resource type="Texture2D" uid="uid://b2bod7ibmudmv" path="res://Graphics/GUI/Buttons/7-2.png" id="9_1xjan"]
[ext_resource type="FontFile" uid="uid://c88rb6dh1ub4j" path="res://Graphics/Fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="10_1oxxi"]
[ext_resource type="AudioStream" uid="uid://dhtdffauvafci" path="res://SFX/mouse/click.mp3" id="11_24axi"]

[sub_resource type="Animation" id="Animation_feaa0"]
resource_name = "IntroSequence"
length = 36.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assets/ArtistSleeping:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(7.6, 14),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Assets/WakeUp:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(14, 21),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Assets/ComicUp:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(21),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 7.6, 14, 21, 26),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"values": [{
"args": [0],
"method": &"start_new_text"
}, {
"args": [1],
"method": &"start_new_text"
}, {
"args": [2],
"method": &"start_new_text"
}, {
"args": [3],
"method": &"start_new_text"
}, {
"args": [],
"method": &"show_continue_button"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Assets/Win:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 7.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_bsqbw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Assets/ArtistSleeping:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Assets/WakeUp:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Assets/ComicUp:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Assets/Win:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsqbw"]
_data = {
&"IntroSequence": SubResource("Animation_feaa0"),
&"RESET": SubResource("Animation_bsqbw")
}

[sub_resource type="LabelSettings" id="LabelSettings_u2yiw"]
font = ExtResource("10_1oxxi")
font_size = 30

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_qwyng")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.100214, 0.07912, 0.0166648, 1)

[node name="Assets" type="Node2D" parent="."]

[node name="ComicUp" type="TextureRect" parent="Assets"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 3840.0
offset_bottom = 2160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4lubk")

[node name="WakeUp" type="TextureRect" parent="Assets"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 3840.0
offset_bottom = 2160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_4n2yx")

[node name="ArtistSleeping" type="TextureRect" parent="Assets"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 3840.0
offset_bottom = 2160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_f0nhm")

[node name="Win" type="TextureRect" parent="Assets"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 3840.0
offset_bottom = 2160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_vq1m4")

[node name="TypewriterLabel" parent="." instance=ExtResource("5_f0nhm")]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -138.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
typing_sound = ExtResource("6_vq1m4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bsqbw")
}
autoplay = "IntroSequence"

[node name="ContinueButton" type="TextureButton" parent="."]
process_mode = 3
texture_filter = 1
offset_left = 1615.0
offset_top = 950.0
offset_right = 1887.0
offset_bottom = 1033.0
size_flags_vertical = 3
texture_normal = ExtResource("7_kjnr2")
texture_pressed = ExtResource("8_6joof")
texture_hover = ExtResource("9_1xjan")
stretch_mode = 0

[node name="Label" type="Label" parent="ContinueButton"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "CONTINUE"
label_settings = SubResource("LabelSettings_u2yiw")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_24axi")

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
